@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2016 the original author or authors.
+ * Copyright 2012-2017 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -50,7 +50,7 @@ final class ChangeableUrls implements Iterable<URL> {
 
 	private ChangeableUrls(URL... urls) {
 		DevToolsSettings settings = DevToolsSettings.get();
-		List<URL> reloadableUrls = new ArrayList<URL>(urls.length);
+		List<URL> reloadableUrls = new ArrayList<>(urls.length);
 		for (URL url : urls) {
 			if ((settings.isRestartInclude(url) || isFolderUrl(url.toString()))
 					&& !settings.isRestartExclude(url)) {
@@ -90,7 +90,7 @@ final class ChangeableUrls implements Iterable<URL> {
 	}
 
 	public static ChangeableUrls fromUrlClassLoader(URLClassLoader classLoader) {
-		List<URL> urls = new ArrayList<URL>();
+		List<URL> urls = new ArrayList<>();
 		for (URL url : classLoader.getURLs()) {
 			urls.add(url);
 			urls.addAll(getUrlsFromClassPathOfJarManifestIfPossible(url));
@@ -104,7 +104,7 @@ final class ChangeableUrls implements Iterable<URL> {
 			return Collections.<URL>emptyList();
 		}
 		try {
-			return getUrlsFromClassPathAttribute(url, jarFile.getManifest());
+			return getUrlsFromManifestClassPathAttribute(jarFile);
 		}
 		catch (IOException ex) {
 			throw new IllegalStateException(
@@ -126,7 +126,9 @@ final class ChangeableUrls implements Iterable<URL> {
 		return null;
 	}
 
-	private static List<URL> getUrlsFromClassPathAttribute(URL base, Manifest manifest) {
+	private static List<URL> getUrlsFromManifestClassPathAttribute(JarFile jarFile)
+			throws IOException {
+		Manifest manifest = jarFile.getManifest();
 		if (manifest == null) {
 			return Collections.<URL>emptyList();
 		}
@@ -136,10 +138,19 @@ final class ChangeableUrls implements Iterable<URL> {
 			return Collections.emptyList();
 		}
 		String[] entries = StringUtils.delimitedListToStringArray(classPath, " ");
-		List<URL> urls = new ArrayList<URL>(entries.length);
+		List<URL> urls = new ArrayList<>(entries.length);
+		File parent = new File(jarFile.getName()).getParentFile();
 		for (String entry : entries) {
 			try {
-				urls.add(new URL(base, entry));
+				File referenced = new File(parent, entry);
+				if (referenced.exists()) {
+					urls.add(referenced.toURI().toURL());
+				}
+				else {
+					System.err.println("Ignoring Class-Path entry " + entry + " found in"
+							+ jarFile.getName() + " as " + referenced
+							+ " does not exist");
+				}
 			}
 			catch (MalformedURLException ex) {
 				throw new IllegalStateException(
@@ -150,7 +161,7 @@ final class ChangeableUrls implements Iterable<URL> {
 	}
 
 	public static ChangeableUrls fromUrls(Collection<URL> urls) {
-		return fromUrls(new ArrayList<URL>(urls).toArray(new URL[urls.size()]));
+		return fromUrls(new ArrayList<>(urls).toArray(new URL[urls.size()]));
 	}
 
 	public static ChangeableUrls fromUrls(URL... urls) {
